--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "antd": "^2.5.3",
     "antd-mobile": "^1.4.1",
     "antd-mobile-demo-data": "^0.1.4",
+    "firebase": "^4.1.3",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
+    "moment": "^2.18.1",
+    "node-uuid": "^1.4.8",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   }
