--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
+    "mobx-react-form": "^1.31.14",
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "validatorjs": "^3.13.3"
   }
 }
