--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "antd-mobile": "^1.4.1",
     "antd-mobile-demo-data": "^0.1.4",
     "firebase": "^4.1.3",
+    "history": "^4.6.3",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
@@ -60,6 +61,7 @@
     "node-uuid": "^1.4.8",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3"
   }
