--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   },
   "homepage": "http://mobxjs.github.com/mobx",
   "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
     "babel-plugin-import": "^1.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
@@ -57,10 +57,12 @@
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
     "mobx-react-form": "^1.31.14",
+    "mobx-router": "0.0.7",
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "path-to-regexp": "^1.7.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3"
