moving webpack server too

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "^0.3.1",
-    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "antd": "^2.5.3",
@@ -65,6 +64,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
