--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "svg-sprite-loader": "^0.3.1",
+    "svg-sprite-loader": "^0.3.1"
   },
   "dependencies": {
     "antd": "^2.5.3",
