--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "less-loader": "^4.0.4",
     "node-sass": "^4.3.0",
     "postcss-loader": "^2.0.6",
-    "postcss-pxtorem": "^4.0.1",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
@@ -65,6 +64,7 @@
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3",
     "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
+    "webpack-dev-server": "^1.16.5",
+    "postcss-pxtorem": "^4.0.1",
   }
 }
