--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.1.1",
-    "svg-sprite-loader": "^0.3.1"
+    "svg-sprite-loader": "^0.3.1",
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "antd": "^2.5.3",
@@ -64,7 +65,6 @@
     "validatorjs": "^3.13.3",
     "webpack": "^1.15.0",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.16.5",
     "postcss-pxtorem": "^4.0.1"
   }
 }
