--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "path-to-regexp": "^1.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fastclick": "^3.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3",
