move webpack-dev-server

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "postcss-loader": "^2.0.6",
     "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
-    "postcss-pxtorem": "^4.0.1",
-    "webpack-dev-server": "^1.16.5"
+    "postcss-pxtorem": "^4.0.1"
   },
   "dependencies": {
     "antd": "^2.5.3",
@@ -66,6 +65,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
