--- a/package.json
+++ b/package.json
@@ -34,7 +34,18 @@
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
-    "react-hot-loader": "^1.3.1"
+    "react-hot-loader": "^1.3.1",
+    "webpack-dev-server": "^1.16.5",
+
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "node-sass": "^4.3.0",
+    "sass-loader": "^4.1.1",
+    "svg-sprite-loader": "^0.3.1",
+    "postcss-loader": "^2.0.6",
+    "css-loader": "^0.26.1",
+    "style-loader": "^0.13.1",
+    "postcss-pxtorem": "^4.0.1"
 
   },
   "dependencies": {
@@ -57,19 +68,8 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "validatorjs": "^3.13.3",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5",
+    "webpack": "^1.15.0"
 
-    "less": "^2.7.2",
-    "less-loader": "^4.0.4",
-    "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "svg-sprite-loader": "^0.3.1",
-    "postcss-loader": "^2.0.6",
-    "css-loader": "^0.26.1",
-    "style-loader": "^0.13.1",
-    "postcss-pxtorem": "^4.0.1"
-    
 
   }
 }
