--- a/package.json
+++ b/package.json
@@ -24,27 +24,28 @@
   },
   "homepage": "http://mobxjs.github.com/mobx",
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0",
     "babel-plugin-import": "^1.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
-    "react-hot-loader": "^1.3.1",
-    "webpack-dev-server": "^1.16.5",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "svg-sprite-loader": "^0.3.1",
     "postcss-loader": "^2.0.6",
-    "css-loader": "^0.26.1",
+    "postcss-pxtorem": "^4.0.1",
+    "react-hot-loader": "^1.3.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "postcss-pxtorem": "^4.0.1"
+    "svg-sprite-loader": "^0.3.1",
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "antd": "^2.5.3",
