--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
+    "babel-runtime": "6.23.0",
     "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
