--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,6 @@
   ],
   "plugins": [
   	"transform-decorators-legacy",
-  	["import", { "libraryName" : "antd-mobile", "style": "css" }]
+    ["import", { "style": "css", "libraryName": "antd-mobile" }]  
   ]
 }
