--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "stage-1"
   ],
   "plugins": [
-  	"transform-decorators-legacy"
+  	"transform-decorators-legacy",
+    ["import", { "style": "css", "libraryName": "antd-mobile" }]
   ]
 }
