--- a/package.json
+++ b/package.json
@@ -40,15 +40,16 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "^0.3.1",
-    "webpack-dev-server": "^1.16.5"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^1.16.5",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-import": "^1.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0"
+  },
+  "dependencies": {
+
 
     "antd": "^2.5.3",
     "antd-mobile": "^1.4.2",
