--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "MobX Boilerplate with Ant.Design",
   "scripts": {
     "start": "node server.js",
+    "build": "webpack",
+    "make": "npm run build && node server.js",
+    "static": "node serverwebdev.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -46,16 +49,14 @@
     "babel-plugin-import": "^1.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0"
+    "babel-preset-stage-1": "^6.22.0",
+    "webpack": "^1.15.0"
   },
   "dependencies": {
-
-
     "antd": "^2.5.3",
     "antd-mobile": "^1.4.2",
     "antd-mobile-demo-data": "^0.1.4",
     "firebase": "^4.1.3",
-    "history": "^4.6.3",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
@@ -67,9 +68,6 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fastclick": "^3.0.2",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "validatorjs": "^3.13.3",
-    "webpack": "^1.15.0"
+    "validatorjs": "^3.13.3"
   }
 }
