--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
     "babel-runtime": "6.23.0",
     "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
@@ -43,14 +49,9 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "^0.3.1",
-    "webpack-dev-server": "^1.16.5",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-import": "^1.2.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-bundle-analyzer": "^2.8.3",
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "antd": "^2.5.3",
