--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fastclick": "^3.0.2",
+    "react-simple-chatbot": "^0.2.1",
     "validatorjs": "^3.13.3"
   }
 }
