--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "bugs": {
     "url": "https://github.com/mobxjs/mobx/issues"
   },
+  "engines": {
+    "node": "6.10.0"
+  },
   "homepage": "http://mobxjs.github.com/mobx",
   "devDependencies": {
     "babel-cli": "^6.24.1",
