--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
   },
   "dependencies": {
     "antd": "^2.5.3",
-    "antd-mobile": "^1.5.0",
+    "antd-mobile": "^1.6.0",
     "antd-mobile-demo-data": "^0.1.4",
     "firebase": "^4.1.3",
+    "has-flag": "^2.0.0",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
