--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
     "path-to-regexp": "^1.7.0",
+    "rc-form": "^1.4.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fastclick": "^3.0.2",
