--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-runtime": "6.23.0",
+    "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
@@ -59,13 +60,11 @@
   "dependencies": {
     "antd": "^2.12.6",
     "antd-mobile": "^1.6.2",
-    "antd-mobile-demo-data": "^0.1.4",
     "firebase": "^4.1.3",
     "has-flag": "^2.0.0",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
-    "mobx-react-form": "^1.31.14",
     "mobx-router": "0.0.7",
     "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
