--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "antd": "^2.12.6",
     "antd-mobile": "^1.6.2",
+    "compression": "^1.7.0",
     "firebase": "^4.1.3",
     "has-flag": "^2.0.0",
     "mobx": "^3.2.2",
