--- a/package.json
+++ b/package.json
@@ -36,16 +36,20 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^6.4.1",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-import": "^1.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.22.0",
     "babel-runtime": "6.23.0",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.26.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^19.0.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
@@ -53,6 +57,8 @@
     "postcss-loader": "^2.0.6",
     "postcss-pxtorem": "^4.0.1",
     "react-hot-loader": "^1.3.1",
+    "react-relay": "^1.2.0",
+    "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.11.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
@@ -81,10 +87,25 @@
     "validatorjs": "^3.13.3"
   },
   "jest": {
+ 
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
     "moduleFileExtensions": [
+      "web.jsx",
+      "web.js",
       "js",
       "jsx",
-      "json"      
+      "json"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "build",
+      "public"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.js?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
     ],
     "moduleDirectories": [
       "node_modules",
@@ -95,8 +116,15 @@
       "firebase",
       "mobxs",
       "tests"
-     ],
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules"
+    ],
     "moduleNameMapper": {
+      "^react-native$": "react-native-web",      
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
