--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "make": "npm run build && node server.js",
     "static": "node serverwebdev.js",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -45,6 +47,7 @@
     "babel-runtime": "6.23.0",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.9.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.1.1",
     "jest": "^19.0.2",
@@ -68,21 +71,23 @@
     "antd-mobile": "^1.6.2",
     "compression": "^1.7.0",
     "firebase": "^4.1.3",
-    "has-flag": "^2.0.0",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
     "mobx-router": "0.0.7",
     "moment": "^2.18.1",
-    "node-uuid": "^1.4.8",
     "path-to-regexp": "^1.7.0",
     "rc-form": "^1.4.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-fastclick": "^3.0.2",
+    "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
   },
   "jest": {
+    "setupFiles": [
+      "<rootDir>/src/tests/jestsetup.js"
+    ],
     "collectCoverage": false,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
@@ -126,7 +131,8 @@
       "^.+\\.js$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules"
+      "node_modules/",
+      "node_modules/antd-mobile/lib/icon/index.web.js"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
