--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.9.1",
     "eslint": "^2.13.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^5.1.1",
     "jest": "^19.0.2",
     "less": "^2.7.2",
