--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^2.13.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^5.1.1",
+    "express": "^4.15.4",
     "jest": "^19.0.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
