--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "antd": "^2.12.6",
     "antd-mobile": "^1.6.2",
     "compression": "^1.7.0",
+    "express": "^4.15.4",
     "firebase": "^4.1.3",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
