--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceRoot}/src",
+            "outFiles": ["${workspaceRoot}/public/*.js"]
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
