--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-fastclick": "^3.0.2",
+    "react-router-dom": "^4.2.2",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
   },
