--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^2.13.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^5.1.1",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^19.0.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
@@ -63,7 +64,7 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "^0.3.1",
-    "webpack": "^1.15.0",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-server": "^1.16.5"
   },
@@ -83,6 +84,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-fastclick": "^3.0.2",
+    "react-loadable": "^4.0.5",
     "react-router-dom": "^4.2.2",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
