--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "^15.6.1",
     "react-fastclick": "^3.0.2",
     "react-loadable": "^4.0.5",
+    "react-loadable-visibility": "^2.3.0",
     "react-router-dom": "^4.2.2",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
