--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "pp" : "webpack --progress -p"
   },
   "repository": {
     "type": "git",
