--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "pp" : "webpack --progress -p"
+    "pp": "webpack --progress -p"
   },
   "repository": {
     "type": "git",
@@ -70,7 +70,7 @@
     "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
-    "antd-mobile": "^1.6.2",
+    "antd-mobile": "^1.6.7",
     "compression": "^1.7.0",
     "firebase": "^4.1.3",
     "mobx": "^3.2.2",
@@ -86,6 +86,7 @@
     "react-loadable": "^4.0.5",
     "react-loadable-visibility": "^2.3.0",
     "react-router-dom": "^4.2.2",
+    "react-simple-chatbot": "^0.2.6",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
   },
