--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "dependencies": {
     "antd-mobile": "^1.6.7",
     "compression": "^1.7.0",
+    "express": "^4.15.4",
     "firebase": "^4.1.3",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
