--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-loadable-visibility": "^2.3.0",
     "react-router-dom": "^4.2.2",
     "react-simple-chatbot": "^0.2.6",
+    "styled-components": "^2.1.2",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3"
   },
