--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,15 @@
 {
   "presets": [
     "react",
-    "es2015",
-    "stage-0"
+    ["es2015",     {
+      "modules": false
+    }],
+    "stage-0",
+
   ],
   "plugins": [
   	"transform-decorators-legacy",
     ["import", { "style": "css", "libraryName": "antd-mobile" }]
   ]
 }
+
