--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.3.0",
   "description": "MobX Boilerplate with Ant.Design",
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
+    "build": "./node_modules/.bin/webpack -p",
     "make": "npm run build && node server.js",
+    "webpack" : "webpack",
+    "webpack-dev-server" : "webpack-dev-server -d",
     "static": "node serverwebdev.js",
     "lint": "eslint src",
     "test": "jest",
@@ -47,6 +49,7 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-runtime": "6.23.0",
     "compression-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "enzyme": "^2.9.1",
     "eslint": "^2.13.1",
@@ -67,7 +70,7 @@
     "svg-sprite-loader": "^0.3.1",
     "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.8.3",
-    "webpack-dev-server": "^1.16.5"
+    "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "antd-mobile": "^1.6.7",
