--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
     "build": "./node_modules/.bin/webpack -p",
     "make": "npm run build && node server.js",
-    "webpack" : "webpack",
-    "webpack-dev-server" : "webpack-dev-server -d",
+    "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server -d",
     "static": "node serverwebdev.js",
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "pp": "webpack --progress -p"
+    "pp": "webpack --progress -p",
+    "webpack:build-dev": "webpack --env=dev",
+    "webpack:build-prod": "webpack --env=prod"
   },
   "repository": {
     "type": "git",
@@ -40,7 +42,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^20.0.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
