--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "description": "MobX Boilerplate with Ant.Design",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
+    "startkk": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
     "build": "./node_modules/.bin/webpack -p",
     "make": "npm run build && node server.js",
     "webpack": "webpack",
@@ -84,8 +84,8 @@
     "moment": "^2.18.1",
     "path-to-regexp": "^1.7.0",
     "rc-form": "^1.4.6",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-fastclick": "^3.0.2",
     "react-loadable": "^4.0.5",
     "react-loadable-visibility": "^2.3.0",
