--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "node-sass": "^4.3.0",
     "postcss-loader": "^2.0.6",
     "postcss-pxtorem": "^4.0.1",
+    "ramda": "^0.24.1",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.11.0",
@@ -90,7 +91,7 @@
     "react-loadable": "^4.0.5",
     "react-loadable-visibility": "^2.3.0",
     "react-router-dom": "^4.2.2",
-    "react-simple-chatbot": "^0.2.6",
+    "react-simple-chatbot": "^0.2.7",
     "styled-components": "^2.1.2",
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3",
