--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "webpack-bundle-analyzer": "^2.8.3"
   },
   "dependencies": {
-    "antd-mobile" : "^1.7.1",
+    "antd-mobile": "^1.7.1",
     "compression": "^1.7.0",
     "express": "^4.15.4",
     "firebase": "^4.1.3",
@@ -84,6 +84,7 @@
     "mobx-router": "0.0.7",
     "moment": "^2.18.1",
     "path-to-regexp": "^1.7.0",
+    "pure-react-carousel": "^1.9.9",
     "rc-form": "^1.4.6",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
