--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ public/*.hot*
 public/*.woff
 public/*.woff2
 public/*.ttf
+public/*.map
+public/*.eot
+singleBundo.js.zip
+singleBundo.js.html
 coverage
 npm-debug.log
 .DS_Store
+
