--- a/package.json
+++ b/package.json
@@ -77,8 +77,6 @@
     "antd-mobile": "^1.7.1",
     "compression": "^1.7.0",
     "express": "^4.15.4",
-    "firebase": "^4.1.3",
-    "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
     "mobx-router": "0.0.7",
@@ -98,8 +96,9 @@
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
-  },
+    "webpack-dev-server": "^2.9.1",
+    "firebase": "^4.8.0"
+    },
   "jest": {
     "setupFiles": [
       "<rootDir>/src/tests/jestsetup.js"
