--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "webpack-bundle-analyzer": "^2.8.3"
   },
   "dependencies": {
-    "antd-mobile": "^1.7.1",
+    "antd-mobile": "^1.7.2",
     "compression": "^1.7.0",
     "express": "^4.15.4",
+    "firebase": "^4.8.0",
     "mobx-react": "^4.2.2",
     "mobx-react-devtools": "^4.2.15",
     "mobx-router": "0.0.7",
@@ -96,9 +97,8 @@
     "uuid": "^3.1.0",
     "validatorjs": "^3.13.3",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "firebase": "^4.8.0"
-    },
+    "webpack-dev-server": "^2.9.1"
+  },
   "jest": {
     "setupFiles": [
       "<rootDir>/src/tests/jestsetup.js"
