--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "compression": "^1.7.0",
     "express": "^4.15.4",
     "firebase": "^4.8.0",
-    "mobx-react": "^4.2.2",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
     "mobx-router": "0.0.7",
     "moment": "^2.18.1",
